added links to pre-proceedings

--- a/program.html
+++ b/program.html
@@ -86,6 +86,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                     <div class="session stalk">
                         <span class="time">11:30</span>: Daniel Figueiredo, Manuel Martins, Raul Fervari.
                         <i>"Probabilistic Relation-Changing Operators".</i>
+                        (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=35">pre-print</a>)
                     </div>
                     <div class="session stalk">
                         <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
@@ -96,6 +97,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                     <div class="session stalk">
                         <span class="time">12:00</span>: Lorenzo Capra, Marco Gribaudo.
                         <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
+                        (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=47">pre-print</a>)
                     </div>
                     <div class="session sorganisation">
                         <span class="time">13:00</span>: <b>Lunch:</b> in <i>La Fábrica de Harinas</i> - 10 min walk (<a href="https://www.hotelsanjuandelosreyes.com/es/la-fabrica-de-harinas">link<a>).
@@ -116,6 +118,7 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                 <div class="session stalk">
                     <span class="time">16:00</span>: Sérgio Marcelino.
                     <i>"Comparing finite many-valued logics via WSkS".</i>
+                    (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=6">pre-print</a>)
                 </div>
                 <div class="session sorganisation">
                     <span class="time">16:30</span>: <b>Coffee break.</b>
@@ -124,18 +127,22 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                 <div class="session stalk">
                     <span class="time">17:00</span>: Muñoz Miguel Pérez.
                     <i>"Four-valued logics of indicative conditionals".</i>
+                    (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=76">pre-print</a>)
                 </div>
                 <div class="session stalk">
                     <span class="time">17:20</span>: Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago.
                     <i>"Dynamic Fuzzy Language for Label Fuzzy Reactive Graphs".</i>
+                    (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=83">pre-print</a>)
                 </div>
                 <div class="session stalk">
                     <span class="time">17:40</span>: Manisha Jain, Alexandre Madeira, Luís Barbosa.
                     <i>"Reasoning about blurred observations of program states: A recipe".</i>
+                    (<a href="/2025/assets/files/   ReacTS2025-pre-proceedings.pdf#page=69">pre-print</a>)
                 </div>
                 <div class="session stalk">
                     <span class="time">18:00</span>: Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins.
                     <i>"A HASKELL encoding for reconfigurable timed systems".</i>
+                    (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=63">pre-print</a>)
                 </div>
                 <div class="session sorganisation">
                     <span class="time">18:20</span>: Closing
