--- a/program.html
+++ b/program.html
@@ -91,7 +91,8 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                     <div class="session stalk">
                         <span class="time">12:30</span>: Markus Krahl, Matthias Güdemann, Stefan Wallentowitz.
                         <i>"goLoop: SMT-Based Loop Analysis via Global Optimization".</i>
-                        (<a href="assets/slides/goLoop-slides.pptx">slides</a>, <a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=21">pre-print</a>)
+                        (<a href="assets/slides/goLoop-slides.pptx">slides</a>,
+                        <a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=21">pre-print</a>)
 
                     </div>
                     <div class="session stalk">
@@ -127,7 +128,8 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                 <div class="session stalk">
                     <span class="time">17:00</span>: Muñoz Miguel Pérez.
                     <i>"Four-valued logics of indicative conditionals".</i>
-                    (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=76">pre-print</a>)
+                    (<a href="assets/slides/fourValued-slides.pdf">slides</a>,
+                    <a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=76">pre-print</a>)
                 </div>
                 <div class="session stalk">
                     <span class="time">17:20</span>: Suene Duarte, Daniel Figueiredo, Manuel Martins, Regivan Santiago.
@@ -142,7 +144,8 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                 <div class="session stalk">
                     <span class="time">18:00</span>: Antonio Castro Iglesias, Alexandre Madeira, Manuel Martins.
                     <i>"A HASKELL encoding for reconfigurable timed systems".</i>
-                    (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=63">pre-print</a>)
+                    (<a href="assets/slides/haskellEncoding-slides.pdf">slides</a>,
+                    <a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=63">pre-print</a>)
                 </div>
                 <div class="session sorganisation">
                     <span class="time">18:20</span>: Closing
