added slides for the last talk

--- a/program.html
+++ b/program.html
@@ -145,7 +145,8 @@ All talks will take place in <del>Room 1.0.7 (Madre de Dios Building of <a href=
                 <div class="session stalk">
                     <span class="time">18:00</span>: Lorenzo Capra, Marco Gribaudo.
                     <i>"Reconfigurable stochastic multi-formalism models: an approach based on Maude".</i>
-                    (<a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=47">pre-print</a>)
+                    (<a href="assets/slides/recStochastic-slides.pdf">slides</a>,
+                     <a href="/2025/assets/files/ReacTS2025-pre-proceedings.pdf#page=47">pre-print</a>)
                 </div>
                 <div class="session sorganisation">
                     <span class="time">18:30</span>: Closing
